--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 31 13:12:20 CST 2016
-ndk.dir=C\:\\Users\\SuChin.Chiu\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\SuChin.Chiu\\AppData\\Local\\Android\\sdk
+#Thu Jun 16 11:32:10 CST 2016
+ndk.dir=C\:\\Users\\SuChin\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\SuChin\\AppData\\Local\\Android\\sdk
